@@ -15,6 +15,7 @@ Agregada emulación de Trojan Light Pen
 Agregada emulación de Datel Lightwriter
 Agregada emulación de Spectrum Doodler Lightpen
 Agregada mirilla de lightgun
+Agregada vista previa de snapshots ZSF de máquinas ZX80 y ZX81
 
 Mejorado Snapshots en RAM:
 - Navegar de manera visual por todos los snapshots en RAM, como en una "Máquina del Tiempo"
