@@ -175,6 +175,50 @@ unsigned char char_set_zx81_no_ascii[]={
 
 
 
+//Se puede obtener volcado con:
+//hexdump -C -v archivo.bin |cut -d ' ' -f2-|cut -d '|' -f1|sed 's/  / /g'|cut -d ' ' -f2-|sed 's/ $/,/'|sed 's/ /,0x/g'|sed 's/^/0x/'
+
+
+//Charset de zx80, con ordenacion codigos no ascii (el de zx80). 64 caracteres
+//Esto NO se usa como charset para estilos de menu, solo para convertir volcados de memoria de pantalla de ZX80 a .SCR
+unsigned char char_set_zx80_no_ascii[]={
+
+0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x14,0x14,0x00,0x00,0x00,0x00,0x00,
+0xf0,0xf0,0xf0,0xf0,0xf0,0xf0,0xf0,0xf0,0x00,0x00,0x00,0x00,0xff,0xff,0xff,0xff,
+0xf0,0xf0,0xf0,0xf0,0x00,0x00,0x00,0x00,0x0f,0x0f,0x0f,0x0f,0x00,0x00,0x00,0x00,
+0x00,0x00,0x00,0x00,0xf0,0xf0,0xf0,0xf0,0x00,0x00,0x00,0x00,0x0f,0x0f,0x0f,0x0f,
+0x0f,0x0f,0x0f,0x0f,0xf0,0xf0,0xf0,0xf0,0xaa,0x55,0xaa,0x55,0xaa,0x55,0xaa,0x55,
+0x00,0x00,0x00,0x00,0xaa,0x55,0xaa,0x55,0xaa,0x55,0xaa,0x55,0x00,0x00,0x00,0x00,
+0x00,0x1e,0x21,0x78,0x20,0x20,0x7f,0x00,0x00,0x08,0x3e,0x48,0x3e,0x09,0x3e,0x08,
+0x00,0x00,0x00,0x08,0x00,0x00,0x08,0x00,0x00,0x3e,0x41,0x06,0x08,0x00,0x08,0x00,
+0x00,0x04,0x08,0x08,0x08,0x08,0x04,0x00,0x00,0x10,0x08,0x08,0x08,0x08,0x10,0x00,
+0x00,0x00,0x00,0x00,0x3e,0x00,0x00,0x00,0x00,0x00,0x08,0x08,0x3e,0x08,0x08,0x00,
+0x00,0x00,0x2a,0x1c,0x08,0x1c,0x2a,0x00,0x00,0x00,0x02,0x04,0x08,0x10,0x20,0x00,
+0x00,0x00,0x00,0x3e,0x00,0x3e,0x00,0x00,0x00,0x00,0x10,0x08,0x04,0x08,0x10,0x00,
+0x00,0x00,0x04,0x08,0x10,0x08,0x04,0x00,0x00,0x00,0x08,0x00,0x00,0x08,0x08,0x10,
+0x00,0x00,0x00,0x00,0x00,0x08,0x08,0x10,0x00,0x00,0x00,0x00,0x00,0x0c,0x0c,0x00,
+0x00,0x1c,0x22,0x41,0x41,0x22,0x1c,0x00,0x00,0x0c,0x14,0x04,0x04,0x04,0x1e,0x00,
+0x00,0x3e,0x41,0x01,0x3e,0x40,0x7f,0x00,0x00,0x3e,0x41,0x06,0x01,0x41,0x3e,0x00,
+0x00,0x0c,0x14,0x24,0x44,0x7f,0x04,0x00,0x00,0x7f,0x40,0x7e,0x01,0x41,0x3e,0x00,
+0x00,0x3e,0x40,0x7e,0x41,0x41,0x3e,0x00,0x00,0x7f,0x01,0x02,0x04,0x08,0x08,0x00,
+0x00,0x3e,0x41,0x3e,0x41,0x41,0x3e,0x00,0x00,0x3e,0x41,0x41,0x3f,0x01,0x3e,0x00,
+0x00,0x3e,0x41,0x41,0x7f,0x41,0x41,0x00,0x00,0x7e,0x41,0x7e,0x41,0x41,0x7e,0x00,
+0x00,0x1e,0x21,0x40,0x40,0x21,0x1e,0x00,0x00,0x7c,0x42,0x41,0x41,0x42,0x7c,0x00,
+0x00,0x7f,0x40,0x7c,0x40,0x40,0x7f,0x00,0x00,0x7f,0x40,0x7c,0x40,0x40,0x40,0x00,
+0x00,0x1e,0x21,0x40,0x47,0x21,0x1e,0x00,0x00,0x41,0x41,0x7f,0x41,0x41,0x41,0x00,
+0x00,0x3e,0x08,0x08,0x08,0x08,0x3e,0x00,0x00,0x02,0x02,0x02,0x42,0x22,0x1c,0x00,
+0x00,0x42,0x44,0x78,0x44,0x42,0x41,0x00,0x00,0x40,0x40,0x40,0x40,0x40,0x7f,0x00,
+0x00,0x41,0x63,0x55,0x49,0x41,0x41,0x00,0x00,0x61,0x51,0x49,0x45,0x43,0x41,0x00,
+0x00,0x3e,0x41,0x41,0x41,0x41,0x3e,0x00,0x00,0x7e,0x41,0x41,0x7e,0x40,0x40,0x00,
+0x00,0x3e,0x41,0x41,0x49,0x45,0x3e,0x00,0x00,0x7e,0x41,0x41,0x7e,0x44,0x42,0x00,
+0x00,0x3e,0x40,0x3e,0x01,0x41,0x3e,0x00,0x00,0x7f,0x08,0x08,0x08,0x08,0x08,0x00,
+0x00,0x41,0x41,0x41,0x41,0x41,0x3e,0x00,0x00,0x41,0x41,0x41,0x22,0x14,0x08,0x00,
+0x00,0x41,0x41,0x41,0x49,0x55,0x22,0x00,0x00,0x21,0x12,0x0c,0x0c,0x12,0x21,0x00,
+0x00,0x41,0x22,0x1c,0x08,0x08,0x08,0x00,0x00,0x7f,0x02,0x04,0x08,0x10,0x7f,0x00
+
+};
+
+
 unsigned char char_set_spectrum[TOTAL_ASCII_CHARSET_ELEMENTS]={		0
 	,	0
 	,	0
