@@ -23,6 +23,7 @@
 #define CHARSET_H
 
 extern unsigned char char_set_zx81_no_ascii[];
+extern unsigned char char_set_zx80_no_ascii[];
 
 extern unsigned char *char_set;
 extern unsigned char char_set_spectrum[];
